--- a/views/show.haml
+++ b/views/show.haml
@@ -1,5 +1,5 @@
 %p
-  - if @record
-    = @record[:contents]
+  - if @paste
+    = @paste.contents
   - else
-    Sorry no have mister
+    .nohave Sorry no have mister
