Syntax highlighting support

--- a/app/assets/stylesheets/pastemaster.styl
+++ b/app/assets/stylesheets/pastemaster.styl
@@ -2,11 +2,11 @@
 
 body, input, select {
   font-family: Helvetica, Arial, sans-serif;
-  font-size: 1.2em;
+  font-size: 1em;
 }
 textarea, pre {
   font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
-  font-size: 1.2em;
+  font-size: 1em;
 }
 html, body, form {
   height: 100%;
@@ -26,6 +26,14 @@ h1 {
   margin: 0;
   text-transform: uppercase;
   color: #ccc;
+}
+.linenos {
+  padding-right: .5em;
+  color: #ccc;
+  border-right: #eee 1px solid;
+}
+.code {
+  padding-left: .5em;
 }
 
 .container {
