--- a/views/default.slim
+++ b/views/default.slim
@@ -4,6 +4,7 @@ html
     title Pastemaster
     link rel="stylesheet" href="/normalize.css?v2.1.2"
     link rel="stylesheet" href="/assets/pastemaster.css?r1"
+    link rel="stylesheet" href="/pygments_solarized_modified.css?r1"
   body
     h1
       strong Paste
