--- a/views/default.slim
+++ b/views/default.slim
@@ -4,6 +4,7 @@ html
     title Pastemaster
     link rel="stylesheet" href="/normalize.css?v2.1.2"
     link rel="stylesheet" href="/assets/pastemaster.css?r1"
+    link rel="stylesheet" href="/assets/dropdown.css?r1"
     link rel="stylesheet" href="/pygments_solarized_modified.css?r1"
   body
     h1
@@ -12,3 +13,4 @@ html
     .container== yield
     script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"
     script type="text/javascript" src="/assets/pastemaster.js?r1"
+    script type="text/javascript" src="/assets/dropdown.js?r1"
