--- a/views/default.slim
+++ b/views/default.slim
@@ -7,9 +7,10 @@ html
     link rel="stylesheet" href="/assets/dropdown.css?r1"
     link rel="stylesheet" href="/pygments_solarized_modified.css?r1"
   body
-    h1
-      strong Paste
-      | master
+    a href="/"
+      h1
+        strong Paste
+        | master
     .container== yield
     script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"
     script type="text/javascript" src="/assets/pastemaster.js?r1"
