--- a/app/assets/stylesheets/pastemaster.styl
+++ b/app/assets/stylesheets/pastemaster.styl
@@ -1,83 +1,81 @@
-* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+*
+  -moz-box-sizing border-box
+  -webkit-box-sizing border-box
+  box-sizing border-box
 
-body, input, select {
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 1em;
-}
-textarea, pre {
-  font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
-  font-size: 1em;
-}
-html, body, form {
-  height: 100%;
-}
-body {
-  background-color: #fcfcfc;
-  padding: 3em;
-}
-h1 {
-  position: absolute;
-  top: 1em;
-  left: 3em;
-  font-weight: 200;
-  font-size: 1em;
-  line-height: 1em;
-  padding: 0;
-  margin: 0;
-  text-transform: uppercase;
-  color: #ccc;
-}
-.linenos {
-  padding-right: .5em;
-  color: #ccc;
-  border-right: #eee 1px solid;
-}
-.code {
-  padding-left: .5em;
-}
+body, input, select
+  font-family Helvetica, Arial, sans-serif
+  font-size 1em
 
-.container {
-  width: 100%;
-  height: 100%;
-}
+textarea, pre
+  font-family Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif
+  font-size 1em
 
-textarea, input {
-  outline: none;
-}
+html, body, form
+  height 100%
 
-textarea {
-  background-color: #ffffff;
-  width: 100%;
-  height: 100%;
-  line-height: 120%;
-  resize: none;
-  border: #ddd 1px solid;
-  border-radius: 5px;
-  padding: .5em;
-}
+body
+  background-color #fcfcfc
+  padding 3em
 
-form input[type="submit"], form a[role="submit"] {
-  float: right;
-}
-form a[role="submit"] {
-  background-color: #fefefe;
-  background-image: -webkit-linear-gradient(top, #ffffff, #f5f5f5);
-  background-image: linear-gradient(to bottom, #ffffff, #f5f5f5);
-  box-shadow: 0 1px 2px 2px #ffffff;
-  color: #666;
-  text-shadow: 0 0 2px #ffffff;
-  border: #ddd 1px solid;
-  border-radius: 4px;
-  border-bottom-width: 4px;
-  font-size: 1em;
-  width: 5em;
-  text-align: center;
-  padding: .4em 0;
-  margin: .4em 0;
-  text-decoration: none;
-  display: none;
-}
-form a[role="submit"]:active {
-  box-shadow: 0 0 2px 2px #eee inset;
-  border-bottom-width: 1px;
-}
+h1
+  position absolute
+  top 1em
+  left 3em
+  font-weight 200
+  font-size 1em
+  line-height 1em
+  padding 0
+  margin 0
+  text-transform uppercase
+  color #ccc
+
+.linenos
+  padding-right .5em
+  color #ccc
+  border-right #eee 1px solid
+
+.code
+  padding-left .5em
+
+.container
+  width 100%
+  height 100%
+
+textarea, input
+  outline none
+
+textarea
+  background-color #ffffff
+  width 100%
+  height 100%
+  line-height 120%
+  resize none
+  border #ddd 1px solid
+  border-radius 5px
+  padding .5em
+
+form input[type="submit"], form a[role="submit"]
+  float right
+
+form a[role="submit"]
+  background-color #fefefe
+  background-image -webkit-linear-gradient(top, #ffffff, #f5f5f5)
+  background-image linear-gradient(to bottom, #ffffff, #f5f5f5)
+  box-shadow 0 1px 2px 2px #ffffff
+  color #666
+  text-shadow 0 0 2px #ffffff
+  border #ddd 1px solid
+  border-radius 4px
+  border-bottom-width 4px
+  font-size 1em
+  width 5em
+  text-align center
+  padding .4em 0
+  margin .4em 0
+  text-decoration none
+  display none
+
+  &:active
+    box-shadow 0 0 2px 2px #eee inset
+    border-bottom-width 1px
