--- a/app/assets/stylesheets/dropdown.styl
+++ b/app/assets/stylesheets/dropdown.styl
@@ -3,19 +3,8 @@
   right 9em
 
   width 15em
-  padding 0.5em 1em
   margin 0.4em auto
 
-  background #f5f5f5
-  background-image -webkit-linear-gradient(top, #ffffff, #f5f5f5)
-  background-image linear-gradient(to bottom, #ffffff, #f5f5f5)
-
-  color #666
-  outline none
-  cursor pointer
-
-  border #ddd 1px solid
-  border-radius 5px
 
   &:after
     content ""
@@ -58,9 +47,12 @@
       &:hover
         background #ccc
         color #fff
+        text-shadow none
+        cursor pointer
 
       &.selected
         background #eee
+        color #666
 
   &.active
     background #fafafa
