--- a/app/assets/stylesheets/pastemaster.styl
+++ b/app/assets/stylesheets/pastemaster.styl
@@ -45,8 +45,26 @@ h1
 textarea, input
   outline none
 
+.btn
+  background-color #fefefe
+  background-image -webkit-linear-gradient(top, #fff, #f0f0f0)
+  background-image linear-gradient(to bottom, #fff, #f0f0f0)
+  color #666
+  text-shadow 0 0 .2em #fff
+  border #ddd 1px solid
+  border-radius 4px
+  font-size 1em
+  padding .5em .8em
+  text-decoration none
+  outline none
+  cursor default
+
+  &:active
+    box-shadow 0 .1em .2em .1em #eee inset
+    border-bottom-width 1px
+
 textarea
-  background-color #ffffff
+  background-color #fff
   width 100%
   height 100%
   line-height 120%
@@ -59,23 +77,7 @@ form input[type="submit"], form a[role="submit"]
   float right
 
 form a[role="submit"]
-  background-color #fefefe
-  background-image -webkit-linear-gradient(top, #ffffff, #f5f5f5)
-  background-image linear-gradient(to bottom, #ffffff, #f5f5f5)
-  box-shadow 0 1px 2px 2px #ffffff
-  color #666
-  text-shadow 0 0 2px #ffffff
-  border #ddd 1px solid
-  border-radius 4px
-  border-bottom-width 4px
-  font-size 1em
   width 5em
   text-align center
-  padding .4em 0
   margin .4em 0
-  text-decoration none
   display none
-
-  &:active
-    box-shadow 0 0 2px 2px #eee inset
-    border-bottom-width 1px
