--- a/app/views/form.slim
+++ b/app/views/form.slim
@@ -1,11 +1,11 @@
 form action="/" method="post" accept-charset="UTF-8"
   textarea name="contents"
   input id="syntax-input" type="hidden" name="syntax" value=""
-  div id="syntax-selector" class="wrapper-dropdown" tabindex="1"
+  div.btn id="syntax-selector" class="wrapper-dropdown" tabindex="1"
     span Syntax
     ul.dropdown
       li.selected data-value="" Plain Text
       - for code, name in @syntaxes
         li data-value=code =name
   input type="submit" value="Save"
-  a href="#" role="submit" Save
+  a.btn href="#" role="submit" Save
