--- a/app/assets/stylesheets/dropdown.styl
+++ b/app/assets/stylesheets/dropdown.styl
@@ -1,10 +1,5 @@
 .wrapper-dropdown
-  position absolute
-  right 9em
-
-  width 15em
-  margin 0.4em auto
-
+  position relative
 
   &:after
     content ""
@@ -16,7 +11,7 @@
     margin-top -6px
     border-width 6px 0 6px 6px
     border-style solid
-    border-color transparent #666
+    border-color transparent #888
 
   .dropdown
     position absolute
