--- a/app/views/default.slim
+++ b/app/views/default.slim
@@ -2,16 +2,13 @@ doctype html
 html
   head
     title Pastemaster
-    link rel="stylesheet" href="/normalize.css?v2.1.2"
-    link rel="stylesheet" href="/assets/pastemaster.css?r1"
-    link rel="stylesheet" href="/assets/dropdown.css?r1"
-    link rel="stylesheet" href="/pygments_solarized_modified.css?r1"
+    link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/2.1.0/normalize.css"
+    == css :application
   body
     a href="/"
       h1
         strong Paste
         | master
     .container== yield
-    script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"
-    script type="text/javascript" src="/assets/pastemaster.js?r1"
-    script type="text/javascript" src="/assets/dropdown.js?r1"
+    script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"
+    == js :application
