--- a/app/assets/css/pastekitten.styl
+++ b/app/assets/css/pastekitten.styl
@@ -30,6 +30,19 @@ h1
   text-transform uppercase
   color #ccc
 
+  &:before
+    display block
+    content ''
+    background url(../img/kitten_70.png)
+    width 43px
+    height 35px
+    background-size 43px 35px
+    background-position top left
+    background-repeat no-repeat
+    margin -10px 0 0 5px
+    float right
+    opacity .5
+
 .linenos
   padding-right .5em
   color #ccc
