--- a/app/views/default.slim
+++ b/app/views/default.slim
@@ -1,14 +1,19 @@
 doctype html
 html
   head
-    title Pastemaster
+    title Paste Kitten
     link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/2.1.0/normalize.css"
     == css :application
   body
     a href="/"
       h1
         strong Paste
-        | master
+        | Kitten
+
+    /!
+      Kitten image author is SkyProductions
+      http://skyproductions.deviantart.com/art/Kitten-line-art-252996232
+
     .container== yield
     script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"
     == js :application
