--- a/app/views/default.slim
+++ b/app/views/default.slim
@@ -3,6 +3,7 @@ html
   head
     title Paste Kitten
     link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/2.1.0/normalize.css"
+    link rel="icon" type="image/x-icon" href="/favicon.ico"
     == css :application
   body
     a href="/"
