Draw logo with styles only

--- a/app/views/default.slim
+++ b/app/views/default.slim
@@ -6,10 +6,8 @@ html
     link rel="icon" type="image/x-icon" href="/favicon.ico"
     == css :application
   body
-    a href="/"
-      h1
-        strong Paste
-        | Kitten
+    a href="/" id="logo"
+      h1 title="Paste Kitten"
 
     /!
       Kitten image author is SkyProductions
