--- a/app/assets/css/pastekitten.styl
+++ b/app/assets/css/pastekitten.styl
@@ -18,19 +18,29 @@ body
   background-color #fcfcfc
   padding 3em
 
-h1
+#logo
   position absolute
-  top 1em
+  top .5em
   left 3em
-  font-weight 200
-  font-size 1em
-  line-height 1em
-  padding 0
-  margin 0
-  text-transform uppercase
-  color #ccc
+  text-decoration none
 
-  &:before
+  h1
+    padding 0
+    margin 0
+    float left
+    font-size 1.5em
+    line-height 1.5em
+    color #ccc
+    &:before, &:after
+      text-transform uppercase
+    &:before
+      content: 'Paste'
+      font-weight: 600
+    &:after
+      content: 'Kitten'
+      font-weight 200
+
+  &:after
     display block
     content ''
     background url(../img/kitten_70.png)
@@ -39,7 +49,7 @@ h1
     background-size 43px 35px
     background-position top left
     background-repeat no-repeat
-    margin -10px 0 0 5px
+    margin -2px 0 0 5px
     float right
     opacity .5
 
